Added handling for keys for other listings